[package]
name = "maisql"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde_json = "1.0"

[dev-dependencies]
futures = "0.3"
