[package]
name = "maisql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
axum = { version = "0.7", features = ["ws"] }
axum-server = "0.6"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = "0.29.0"
chrono = "0.4"
serde_json = "1.0"
etcd-client = "0.14.1"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
futures = "0.3"
