[package]
name = "maisql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "*" }
async-trait = { version = "*" }
futures = { version = "*" }
serde = { version = "*", features = ["derive"] }
rand = { version = "*" }
tokio = { version = "*", features = ["full"] }
serde_json = { version = "*" }
rmp-serde = { version = "*" }
sha2 = "0.10.8"
byteorder = "1.5.0"
fuser = "0.14.0"
