[package]
name = "raft"
version = "0.1.0"
edition = "2021"

[dependencies]
cluster = { path = "../cluster" }
rmp-serde = "1.3.0"
transport = { path = "../transport" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
anyhow = { version = "*" }
rand = "0.8.5"
futures = "0.3.30"
